model/0.1/README.md
# Thai NER 0.1

ใช้ข้อมูล Train ทั้งหมด 4564 ประโยค โดย CRF + POS TAG ในการ train

แท็กที่รองรับ

- DATA วันเดือนปี
- TIME เวลา/ช่วงเวลา
- EMAIL อีเมล
- LEN ความยาว
- LOCATION สถานที่/ที่ตั้ง
- ORGANIZATION บริษัท/องค์กร
- PERSON ชื่อบุคคล
- PHONE เบอร์มือถือ
- URL ลิงค์
- ZIP รหัสไปรษณีย์
- MONEY เงิน



f1

```
                precision    recall  f1-score   support

        B-DATE      0.926     0.862     0.893       246
        I-DATE      0.935     0.972     0.953       532
       B-EMAIL      1.000     1.000     1.000         3
       I-EMAIL      1.000     1.000     1.000        18
         B-LEN      0.938     0.789     0.857        19
         I-LEN      0.970     0.800     0.877        40
    B-LOCATION      0.857     0.772     0.812       658
    I-LOCATION      0.791     0.741     0.765       675
       B-MONEY      0.972     0.908     0.939        76
       I-MONEY      0.962     0.962     0.962       186
B-ORGANIZATION      0.917     0.756     0.828       741
I-ORGANIZATION      0.878     0.696     0.776       933
     B-PERCENT      0.938     0.857     0.896        35
     I-PERCENT      0.690     0.875     0.772        56
      B-PERSON      0.950     0.806     0.872       448
      I-PERSON      0.924     0.886     0.905      1574
       B-PHONE      0.944     0.773     0.850        22
       I-PHONE      1.000     0.819     0.901        83
        B-TIME      0.889     0.732     0.803       142
        I-TIME      0.921     0.851     0.885       275
         B-URL      1.000     1.000     1.000        14
         I-URL      1.000     0.898     0.946       225
         B-ZIP      0.500     1.000     0.667         1

   avg / total      0.904     0.819     0.858      7002
```

และนอกจากหา f1 เราได้ทำการ cross validate เพื่อยืนยันประสิทธิภาพอีก 5 ครั้ง

```
{'fit_time': array([235.03969622, 277.004848  , 272.80962324, 199.00539994,
       266.30619574]), 'score_time': array([0.50174475, 0.52033353, 0.4249537 , 0.45745587, 0.42857337]), 'test_score': array([0.86927933, 0.89728972, 0.90795087, 0.85746621, 0.9062189 ]), 'train_score': array([0.98493813, 0.9859175 , 0.98472945, 0.98529156, 0.98442529])}
```

ไฟล์

- thainer-0.1.model เป็นไฟล์โมเดลที่เรา train ด้วยข้อมูลทั้งหมด
- data-pos.model0 เป็นไฟล์โมเดลที่เรา train 80 % และแบ่ง val 20 % ตามรายละเอียดข้างบน
- data.txt เป็นไฟล์ข้อมูลใช้ train
- train2.py เป็นไฟล์สำหรับ train data-pos.model0
- train2_all.py เป็นไฟล์สำหรับ train ข้อมูลทั้งหมด
- datatrain.data เป็นไฟล์ข้อมูลที่ได้จาก data.txt สำหรับนำไป train
- using2.py เป็นไฟล์สำหรับรันทดสอบ NER



พัฒนาโดย นาย วรรณพงษ์  ภัททิยไพบูลย์

นักศึกษาชั้นปีที่ 2 สาขาวิทยาการคอมพิวเตอร์และสารสนเทศ

คณะวิทยาศาสตร์ประยุกต์และวิศวกรรมศาสตร์

มหาวิทยาลัยขอนแก่น วิทยาเขตหนองคาย

<wannaphong@kkumail.com>